--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
               <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Experiências
             </h2>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>Petrobras Biocombustível - Prestação de Serviços pela Kempetro Engenharia</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro de 2019 - <span class="w3-tag w3-teal w3-round">Aual</span></h6>
+              <h5 class="w3-opacity"><b>Kovi Tacnologia S/A.</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Abril de 2022 - <span class="w3-tag w3-teal w3-round">Aual</span></h6>
               <p>Fiscal de campo de contrato; Função de líder de equipe no setor da balança e faturamento na usina de biodiesel em candeias; Faturamento de notas fiscais para expedição de B100 (Biodiesel) e produtos especiais; Tratamento 
                 das notas fiscais de matérias primas e insumos recebidos, entrada de mercadoria (MIGO) no 
                 sistema SAP/R3; Controle de entrada, saída e pesagem de carretas; Atuando na automatização de 
