Atualização das experiencias

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Abril de 2022 - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
               <p>Minhas Atribuições Incluem:
 
-                Controle de estoque: Cadastros, lançamentos, baixas e emissão de notas fiscais.
+                Controle de estoque, cadastros, lançamentos, baixas e emissão de notas fiscais.
                 Execução de inventários ciclos e fiscais.
                 Gerenciamento de EPIs.
                 Criação de KPIs e Dashboards.
@@ -117,10 +117,37 @@
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
+              <h5 class="w3-opacity"><b>GPA - Grupi Pão de Açucar</b></h5>
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - FIM</h6>
-              <p>TODO</p>
+              <p>Atribuições em suporte field service, help desk e service desk, proporcionando orientação valiosa aos usuários no uso de hardware e software. 
+
+                Minhas competências incluem:
+
+                Configuração de hardware, software e rede, atendendo às diversas necessidades do empreendimento.
+                Montagem e manutenção abrangente, cobrindo manutenções corretivas, preventivas e preditivas dos equipamentos da empresa.</p>
             </div>
+            <hr>
+            <div class="w3-container">
+              <h5 class="w3-opacity"><b>Kovi Tacnologia S/A.</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Abril de 2022 - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
+              <p>Minhas Atribuições Incluem:
+
+                Controle de estoque, cadastros, lançamentos, baixas e emissão de notas fiscais.
+                Execução de inventários ciclos e fiscais.
+                Gerenciamento de EPIs.
+                Criação de KPIs e Dashboards.
+                Melhoria contínua de processos.</p>
+              <hr>
+            </div>
+            <div class="w3-container">
+              <h5 class="w3-opacity"><b>GPA - Grupi Pão de Açucar</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - FIM</h6>
+              <p>Atribuições em suporte field service, help desk e service desk, proporcionando orientação valiosa aos usuários no uso de hardware e software. 
+                
+                Minhas competências incluem:
+
+                Configuração de hardware, software e rede, atendendo às diversas necessidades do empreendimento.
+                Montagem e manutenção abrangente, cobrindo manutenções corretivas, preventivas e preditivas dos equipamentos da empresa.</p>
           </div>
   
           <div class="w3-container w3-card w3-white">
