Correção das experiencias

--- a/index.html
+++ b/index.html
@@ -140,9 +140,11 @@
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>GPA - Grupi Pão de Açucar</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - FIM</h6>
-              <p>Atribuições em suporte field service, help desk e service desk, proporcionando orientação valiosa aos usuários no uso de hardware e software. 
+              <h5 class="w3-opacity"><b>GPA - Grupo Pão de Açucar</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Abril de 2021 - Abril de 2022</h6>
+              <p><b>Analista de CPD Remoto</b>
+                <hr>
+                Atribuições em suporte field service, help desk e service desk, proporcionando orientação valiosa aos usuários no uso de hardware e software. 
                 
                 Minhas competências incluem:
 
