Correção 2 das experiencias

--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>GPA - Grupi Pão de Açucar</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - FIM</h6>
+              <h5 class="w3-opacity"><b>GPA - Grupo Pão de Açucar</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Abril de 2021 - Abril de 2022</h6>
               <p>Atribuições em suporte field service, help desk e service desk, proporcionando orientação valiosa aos usuários no uso de hardware e software. 
 
                 Minhas competências incluem:
@@ -128,28 +128,31 @@
             </div>
             <hr>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>Kovi Tacnologia S/A.</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Abril de 2022 - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
-              <p>Minhas Atribuições Incluem:
+              <h5 class="w3-opacity"><b>Engebras S/A Ind Com Tecnol Informatica</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Março de 2013 - Junho de 2015<span class="w3-tag w3-teal w3-round">Atual</span></h6>
+              <p>Em minha experiência na Engebras, desempenhei um papel multifuncional com responsabilidades que abrangiam:
 
-                Controle de estoque, cadastros, lançamentos, baixas e emissão de notas fiscais.
-                Execução de inventários ciclos e fiscais.
-                Gerenciamento de EPIs.
-                Criação de KPIs e Dashboards.
-                Melhoria contínua de processos.</p>
+                Recebimento administrativo, lançamento e emissão de notas fiscais, inventário de materiais.
+                Expedição e rastreamento de carga, contratação de frete, controle de frota.
+                Solicitação de compras, negociações com clientes internos e externos, elaboração e controle de planilhas, agendamento de coletas.
+                Controle de frota, documentos, multas, sinistros, pedágio e aluguel.
+                
+                Minha passagem pela empresa foi marcada pelo desempenho de responsabilidades variadas e pela contribuição para o aprimoramento das operações administrativas e logísticas.</p>
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>GPA - Grupo Pão de Açucar</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Abril de 2021 - Abril de 2022</h6>
-              <p><b>Analista de CPD Remoto</b>
-                <hr>
-                Atribuições em suporte field service, help desk e service desk, proporcionando orientação valiosa aos usuários no uso de hardware e software. 
-                
-                Minhas competências incluem:
+              <h5 class="w3-opacity"><b>Cortesia Concreto</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Abril de 2010 - Outubro de 2012</h6>
+              <p>Na minha passagem pela empresa Cortesia, estive envolvido em diversas responsabilidades essenciais, incluindo:
 
-                Configuração de hardware, software e rede, atendendo às diversas necessidades do empreendimento.
-                Montagem e manutenção abrangente, cobrindo manutenções corretivas, preventivas e preditivas dos equipamentos da empresa.</p>
+              Gerenciamento das atividades de estocagem e armazenamento, com foco na reestruturação de layout e conformidade com o método FIFO.
+              Planejamento e supervisão das operações de recebimento, estocagem, cadastramento e liberação de materiais, além de solicitações de compras.
+              Programação e execução de inventários para garantir a precisão dos registros de estoque.
+              Elaboração de relatórios gerenciais e KPIs para auxiliar na tomada de decisões.
+              Otimização contínua de processos para melhorar a eficiência operacional.
+              Orientação e treinamento da equipe para aprimorar habilidades.
+              Liderança na implantação do sistema Datasul (TOTVS).
+              Sua contribuição na Cortesia se destacou pela gestão eficaz, otimização de processos e liderança na implementação de sistemas, resultando em melhorias significativas nas operações e nos resultados da empresa.</p>
           </div>
   
           <div class="w3-container w3-card w3-white">
