Atualização da seção cursos

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <hr>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Engebras S/A Ind Com Tecnol Informatica</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Março de 2013 - Junho de 2015<span class="w3-tag w3-teal w3-round">Atual</span></h6>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Março de 2013 - Junho de 2015</h6>
               <p>Em minha experiência na Engebras, desempenhei um papel multifuncional com responsabilidades que abrangiam:
 
                 Recebimento administrativo, lançamento e emissão de notas fiscais, inventário de materiais.
@@ -161,18 +161,62 @@
             </h2>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Digital Innovation One (DIO)</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Abril de 2023 - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
               <p>
                 Maior plataforma de educação aberta em TI da América Latina, com mais 1 milhão de usuários. 
                 A DIO possui parcerias com algumas das empresas mais inovadoras do mundo, proporcionando experiências 
                 de ensino imersivas e com foco em empregabilidade. Nesse contexto, seguem meus principais certificados:
               </p>
               <ul>
-                <li><a href="https://www.dio.me/certificate/6213111D" target="_blank">Curso: TQI Fullstack Developer (125h)</a></li>
-                <li><a href="https://www.dio.me/certificate/72361F24" target="_blank">Curso: Formação HTML Web Developer (21h)</a></li>
-                <li><a href="https://www.dio.me/certificate/64CE8868" target="_blank">Curso: Formação CSS Web Developer (46h)</a></li>
+                <li><a href="https://www.dio.me/certificate/D44B07EF" target="_blank">Curso: Formação Python Developer (64h)</a></li>     
+                <li><a href="https://www.dio.me/certificate/72361F24" target="_blank">Curso: Desenvolvimento Web Com Python (13h)</a></li>     
+                <li><a href="https://www.dio.me/certificate/ACEBD787" target="_blank">Curso: Formação Lógica de Programação (41h)</a></li>
+                <li><a href="https://www.dio.me/certificate/04542782" target="_blank">Curso: Primeiros Passos em SQL e NoSQL (06h)</a></li>
+                <li><a href="https://www.dio.me/certificate/CA7D9FB8" target="_blank">Curso: Banco de Dados Relacionais (SQL) (03h)</a></li>
+                <li><a href="https://www.dio.me/certificate/A7992CBC" target="_blank">Curso: Fundamentos da Plataforma Java (10h)</a></li>
+                
               </ul>
               <hr>
+              <div class="w3-container">
+                <h5 class="w3-opacity"><b>FIAP</b></h5>
+                <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Abril de 2023 - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
+                <p>
+                  Os maiores e mais relevantes players globais apoiam a FIAP em áreas como:
+                  tecnologia, conteúdo e integração entre o ambiente empresarial e o mundo acadêmico.
+                </p>
+                <ul>
+                  <li><a href="https://on.fiap.com.br/pluginfile.php/1/local_nanocourses/certificado_nanocourse/87807/c1ec8866ba0c9e4f4800b34e1741a167/certificado.png" target="_blank">Curso: Python (80h)</a></li>
+                  <li><a href="https://on.fiap.com.br/pluginfile.php/1/local_nanocourses/certificado_nanocourse/87926/ef4c649eb043e36627af59819840fd39/certificado.png" target="_blank">Curso: DevOps & Agile Culture (60h)</a></li>
+                </ul>
+                <hr>
+                <div class="w3-container">
+                  <h5 class="w3-opacity"><b>Digital Innovation One (DIO)</b></h5>
+                  <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Abril de 2023 - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
+                  <p>
+                    Maior plataforma de educação aberta em TI da América Latina, com mais 1 milhão de usuários. 
+                    A DIO possui parcerias com algumas das empresas mais inovadoras do mundo, proporcionando experiências 
+                    de ensino imersivas e com foco em empregabilidade. Nesse contexto, seguem meus principais certificados:
+                  </p>
+                  <ul>
+                    <li><a href="https://www.dio.me/certificate/6213111D" target="_blank">Curso: TQI Fullstack Developer (125h)</a></li>
+                    <li><a href="https://www.dio.me/certificate/72361F24" target="_blank">Curso: Formação HTML Web Developer (21h)</a></li>
+                    <li><a href="https://www.dio.me/certificate/64CE8868" target="_blank">Curso: Formação CSS Web Developer (46h)</a></li>
+                  </ul>
+                  <hr>
+                  <div class="w3-container">
+                    <h5 class="w3-opacity"><b>Digital Innovation One (DIO)</b></h5>
+                    <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Abril de 2023 - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
+                    <p>
+                      Maior plataforma de educação aberta em TI da América Latina, com mais 1 milhão de usuários. 
+                      A DIO possui parcerias com algumas das empresas mais inovadoras do mundo, proporcionando experiências 
+                      de ensino imersivas e com foco em empregabilidade. Nesse contexto, seguem meus principais certificados:
+                    </p>
+                    <ul>
+                      <li><a href="https://www.dio.me/certificate/6213111D" target="_blank">Curso: TQI Fullstack Developer (125h)</a></li>
+                      <li><a href="https://www.dio.me/certificate/72361F24" target="_blank">Curso: Formação HTML Web Developer (21h)</a></li>
+                      <li><a href="https://www.dio.me/certificate/64CE8868" target="_blank">Curso: Formação CSS Web Developer (46h)</a></li>
+                    </ul>
+                    <hr>
             </div>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Centro Educacional Teodoro Sampaio</b></h5>
