Atualização da seção educação

--- a/index.html
+++ b/index.html
@@ -188,41 +188,18 @@
                   <li><a href="https://on.fiap.com.br/pluginfile.php/1/local_nanocourses/certificado_nanocourse/87807/c1ec8866ba0c9e4f4800b34e1741a167/certificado.png" target="_blank">Curso: Python (80h)</a></li>
                   <li><a href="https://on.fiap.com.br/pluginfile.php/1/local_nanocourses/certificado_nanocourse/87926/ef4c649eb043e36627af59819840fd39/certificado.png" target="_blank">Curso: DevOps & Agile Culture (60h)</a></li>
                 </ul>
-                <hr>
-                <div class="w3-container">
-                  <h5 class="w3-opacity"><b>Digital Innovation One (DIO)</b></h5>
-                  <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Abril de 2023 - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
-                  <p>
-                    Maior plataforma de educação aberta em TI da América Latina, com mais 1 milhão de usuários. 
-                    A DIO possui parcerias com algumas das empresas mais inovadoras do mundo, proporcionando experiências 
-                    de ensino imersivas e com foco em empregabilidade. Nesse contexto, seguem meus principais certificados:
-                  </p>
-                  <ul>
-                    <li><a href="https://www.dio.me/certificate/6213111D" target="_blank">Curso: TQI Fullstack Developer (125h)</a></li>
-                    <li><a href="https://www.dio.me/certificate/72361F24" target="_blank">Curso: Formação HTML Web Developer (21h)</a></li>
-                    <li><a href="https://www.dio.me/certificate/64CE8868" target="_blank">Curso: Formação CSS Web Developer (46h)</a></li>
-                  </ul>
-                  <hr>
-                  <div class="w3-container">
-                    <h5 class="w3-opacity"><b>Digital Innovation One (DIO)</b></h5>
-                    <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Abril de 2023 - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
-                    <p>
-                      Maior plataforma de educação aberta em TI da América Latina, com mais 1 milhão de usuários. 
-                      A DIO possui parcerias com algumas das empresas mais inovadoras do mundo, proporcionando experiências 
-                      de ensino imersivas e com foco em empregabilidade. Nesse contexto, seguem meus principais certificados:
-                    </p>
-                    <ul>
-                      <li><a href="https://www.dio.me/certificate/6213111D" target="_blank">Curso: TQI Fullstack Developer (125h)</a></li>
-                      <li><a href="https://www.dio.me/certificate/72361F24" target="_blank">Curso: Formação HTML Web Developer (21h)</a></li>
-                      <li><a href="https://www.dio.me/certificate/64CE8868" target="_blank">Curso: Formação CSS Web Developer (46h)</a></li>
-                    </ul>
-                    <hr>
+                <hr>                
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>Centro Educacional Teodoro Sampaio</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>1993 - 1995</h6>
-              <p>Técnico em Contabilidade</p>
+              <h5 class="w3-opacity"><b>Universidade Paulista</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2013 - 2015</h6>
+              <p>Técnologo em Logistica Empresarial</p>
             </div>
+          </div>
+          <div class="w3-container">
+            <h5 class="w3-opacity"><b>Universidade Nove de Julho</b></h5>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2023 - 2025</h6>
+            <p>Análise e Desenvolvimento de Sistemas</p>
           </div>
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
@@ -232,7 +209,7 @@
             <div class="w3-container">
               <h6 class="w3-text-teal">
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
-                <a href="LINK_GITHUB" target="_blank">USUARIO_GITHUB/REPO</a>
+                <a href="LINK_GITHUB" target="_blank">https://github.com/RenatoMor/dio_formacao_python_developer_projetos</a>
               </h6>
               <p>TODO</p>
               <hr>
