--- a/index.html
+++ b/index.html
@@ -193,14 +193,14 @@
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Universidade Paulista</b></h5>
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2013 - 2015</h6>
-              <p>Técnologo em Logistica Empresarial</p>
+              <p>Logistica Empresarial</p>
             </div>
           </div>
-          <div class="w3-container">
-            <h5 class="w3-opacity"><b>Universidade Nove de Julho</b></h5>
-            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2023 - 2025</h6>
-            <p>Análise e Desenvolvimento de Sistemas</p>
-          </div>
+            <div class="w3-container">
+              <h5 class="w3-opacity"><b>Universidade Nove de Julho</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2023 - 2025</h6>
+              <p>Análise e Desenvolvimento de Sistemas</p>
+            </div>
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16">
@@ -234,8 +234,8 @@
   
     <footer class="w3-container w3-teal w3-center w3-margin-top">
       <p>Minhas Redes Sociais</p>
-      <a href="https://github.com/JorgeSantosxp" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
-      <a href="https://www.linkedin.com/in/jorge-santos-41774793" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+      <a href="https://github.com/RenatoMor" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
+      <a href="www.linkedin.com/in/renatomoreira-rm" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
       <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
     </footer>
   
