Substituição de cores

--- a/index.html
+++ b/index.html
@@ -36,48 +36,48 @@
               <h2>Renato Moreira</h2>
             </div>
             <div class="w3-container">
-              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Assistente de Logística</p>
-              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Estudante de Analise e Desenvolvimento de Sistemas</p>
-              <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>São Paulo - SP, Brasil</p>
-              <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>renato_klaver@outlook.com</p>
-              <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>(11) 94216-7473</p>
+              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-indigo"></i>Assistente de Logística</p>
+              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-indigo"></i>Estudante de Analise e Desenvolvimento de Sistemas</p>
+              <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-indigo"></i>São Paulo - SP, Brasil</p>
+              <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-indigo"></i>renato_klaver@outlook.com</p>
+              <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-indigo"></i>(11) 94216-7473</p>
               <hr>
   
               <p class="w3-large">
-                <b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b>
+                <b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-indigo"></i>Skills</b>
               </p>
               <p>Python</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">60%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:70%">60%</div>
               </div>
               <p>C#</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:60%">60%</div>
               </div>
               <p>Java</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">50%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:50%">50%</div>
               </div>  
               <p>Android</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:40%">40%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:40%">40%</div>
               </div>
               <br>
   
               <p class="w3-large w3-text-theme">
-                <b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Idiomas</b>
+                <b><i class="fa fa-globe fa-fw w3-margin-right w3-text-indigo"></i>Idiomas</b>
               </p>
               <p>Português</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%"></div>
+                <div class="w3-round-xlarge w3-indigo" style="height:24px;width:100%"></div>
               </div>
               <p>Inglês</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:30%"></div>
+                <div class="w3-round-xlarge w3-indigo" style="height:24px;width:30%"></div>
               </div>
               <p>Espanhol</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:20%"></div>
+                <div class="w3-round-xlarge w3-indigo" style="height:24px;width:20%"></div>
               </div>
               <br>
             </div>
@@ -90,7 +90,7 @@
         <div class="w3-twothird">
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
-            <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Sobre</h2>
+            <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Sobre</h2>
             <p>Apresentação das Minhas Competências:
 
               Sou um profissional com uma sólida experiência em logística, abrangendo gestão de estoque, armazenagem, distribuição, contratos, compras e logística de transporte. Tenho expertise em planejamento e execução de inventários, focando na eficiência e conformidade. Destaco-me na gestão de custos e liderança de equipes.
@@ -102,11 +102,11 @@
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-red w3-padding-16">
-              <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Experiências
+              <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Experiências
             </h2>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Kovi Tacnologia S/A.</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Abril de 2022 - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
+              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Abril de 2022 - <span class="w3-tag w3-indigo w3-round">Atual</span></h6>
               <p>Minhas Atribuições Incluem:
 
                 Controle de estoque, cadastros, lançamentos, baixas e emissão de notas fiscais.
@@ -118,7 +118,7 @@
             </div>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>GPA - Grupo Pão de Açucar</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Abril de 2021 - Abril de 2022</h6>
+              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Abril de 2021 - Abril de 2022</h6>
               <p>Atribuições em suporte field service, help desk e service desk, proporcionando orientação valiosa aos usuários no uso de hardware e software. 
 
                 Minhas competências incluem:
@@ -129,7 +129,7 @@
             <hr>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Engebras S/A Ind Com Tecnol Informatica</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Março de 2013 - Junho de 2015</h6>
+              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Março de 2013 - Junho de 2015</h6>
               <p>Em minha experiência na Engebras, desempenhei um papel multifuncional com responsabilidades que abrangiam:
 
                 Recebimento administrativo, lançamento e emissão de notas fiscais, inventário de materiais.
@@ -142,7 +142,7 @@
             </div>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Cortesia Concreto</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Abril de 2010 - Outubro de 2012</h6>
+              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Abril de 2010 - Outubro de 2012</h6>
               <p>Na minha passagem pela empresa Cortesia, estive envolvido em diversas responsabilidades essenciais, incluindo:
 
               Gerenciamento das atividades de estocagem e armazenamento, com foco na reestruturação de layout e conformidade com o método FIFO.
@@ -157,11 +157,11 @@
   
           <div class="w3-container w3-card w3-white">
             <h2 class="w3-text-grey w3-padding-16">
-              <i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Educação
+              <i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Educação
             </h2>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Digital Innovation One (DIO)</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Abril de 2023 - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
+              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Abril de 2023 - <span class="w3-tag w3-indigo w3-round">Atual</span></h6>
               <p>
                 Maior plataforma de educação aberta em TI da América Latina, com mais 1 milhão de usuários. 
                 A DIO possui parcerias com algumas das empresas mais inovadoras do mundo, proporcionando experiências 
@@ -179,7 +179,7 @@
               <hr>
               <div class="w3-container">
                 <h5 class="w3-opacity"><b>FIAP</b></h5>
-                <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Abril de 2023 - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
+                <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Abril de 2023 - <span class="w3-tag w3-indigo w3-round">Atual</span></h6>
                 <p>
                   Os maiores e mais relevantes players globais apoiam a FIAP em áreas como:
                   tecnologia, conteúdo e integração entre o ambiente empresarial e o mundo acadêmico.
@@ -192,22 +192,22 @@
             </div>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Universidade Paulista</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2013 - 2015</h6>
+              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2013 - 2015</h6>
               <p>Logistica Empresarial</p>
             </div>
           </div>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Universidade Nove de Julho</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2023 - 2025</h6>
+              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2023 - 2025</h6>
               <p>Análise e Desenvolvimento de Sistemas</p>
             </div>
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16">
-              <i class="fa fa-git fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Projetos
+              <i class="fa fa-git fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Projetos
             </h2>
             <div class="w3-container">
-              <h6 class="w3-text-teal">
+              <h6 class="w3-text-indigo">
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
                 <a href="LINK_GITHUB" target="_blank">https://github.com/RenatoMor/dio_formacao_python_developer_projetos</a>
               </h6>
@@ -215,7 +215,7 @@
               <hr>
             </div>
             <div class="w3-container">
-              <h6 class="w3-text-teal">
+              <h6 class="w3-text-indigo">
                 <i class="fa fa-gitlab fa-fw w3-margin-right"></i>
                 <a href="LINK_GITLAB" target="_blank">USUARIO_GITLAB/REPO</a>
               </h6>
@@ -232,7 +232,7 @@
       <!-- End Page Container -->
     </div>
   
-    <footer class="w3-container w3-teal w3-center w3-margin-top">
+    <footer class="w3-container w3-indigo w3-center w3-margin-top">
       <p>Minhas Redes Sociais</p>
       <a href="https://github.com/RenatoMor" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
       <a href="www.linkedin.com/in/renatomoreira-rm" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
