--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
             <div class="w3-container">
               <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-indigo"></i>Assistente de Logística</p>
-              <p><i class="fa fa-graduation fa-fw w3-margin-right w3-large w3-text-indigo"></i>Estudante de Analise e Desenvolvimento de Sistemas</p>
+              <p><i class="fa fa-graduation fa-fw w3-margin-right w3-large w3-text-indigo"></i>Analise e Desenvolvimento de Sistemas</p>
               <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-indigo"></i>São Paulo - SP, Brasil</p>
               <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-indigo"></i>renato_klaver@outlook.com</p>
               <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-indigo"></i>(11) 94216-7473</p>
@@ -101,7 +101,7 @@
           </div>
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
-            <h2 class="w3-text-opacity w3-padding-16">
+            <h2 class="w3-text-grey w3-padding-16">
               <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Experiências
             </h2>
             <div class="w3-container">
